# dug

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
src/: main.rs
