[package]
name = "dug"
version = "0.1.0"
edition = "2021"

[dependencies]
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
