[package]
name = "dug"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.131"
